--- a/templates/template2.html
+++ b/templates/template2.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <table>
-      {% if temp_humid["temp"] is not None %}
+      {% if data["temp_humid"]["temp"] is not none %}
       <tr>
         <th> Temperature: {{ temp_humid["temp"] }} </th>
         <th> Humidity: {{ temp_humid["humid"] }}% </th>
@@ -14,9 +14,9 @@
           <td><img src="data:image/png;base64,{{ temp_humid['plot']|safe }}"></td>
         </tr>
         {% endif %}
-        {% if air_quality_plot is not None %}
+        {% if data["air_quality_plot"] is not none %}
         <tr>
-          <td><img src="data:image/png;base64,{{ air_quality_plot|safe }}"></td>
+          <td><img src="data:image/png;base64,{{ data['air_quality_plot']|safe }}"></td>
         </tr>
         {% endif %}
       </table>
